development/01-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: demo-argocd-deployment
  labels:
    app: demo-argocd
spec:
  replicas: 3
  strategy:
   type: "Rolling"
  template:
    metadata:
      labels:
        app: demo-argocd
    spec:
      containers:
       - name: demo-argocd
         image: quay.io/sarcosh/demo-argocd:1.0.0 
         imagePullPolicy: Always
         livenessProbe: 
           httpGet: 
             scheme: HTTP
             path: /actuator/health
             port: 8080 
         readinessProbe: 
           httpGet: 
             scheme: HTTP
             path: /actuator/health
             port: 8080 
         resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 300m
            memory: 512Mi
         ports:
          - containerPort: 8080
      restartPolicy: Always
